2010-08-31  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=40947
        <rdar://problem/8124723> REGRESSION (r57544): XMLHttpRequest POSTed multipart/form-data
        wrongfully gets a charset appended

        * http/tests/xmlhttprequest/access-control-basic-whitelist-request-headers-expected.txt:
        * http/tests/xmlhttprequest/request-encoding2.html:
        Updated tests that has wrong expectations.

        * http/tests/xmlhttprequest/post-with-boundary-expected.txt: Added.
        * http/tests/xmlhttprequest/post-with-boundary.html: Added.
        Added a new test, sending a valid multipart form with boundary.

2010-08-31  Darin Adler  <darin@apple.com>

        Fix gtk bot.

        * platform/gtk/Skipped: Skip the webarchive/loading/missing-data.html for the same reason
        the nearly identical webarchive/loading/mainresource-null-mimetype-crash.html is skipped.

2010-08-31  Tony Chang  <tony@chromium.org>

        Unreviewed, update pngs where the checksum is correct, but the png doesn't match.

        * platform/chromium-linux/fast/dom/attr_dead_doc-expected.png:
        * platform/chromium-linux/fast/frames/content-opacity-1-expected.png:
        * platform/chromium-linux/fast/frames/content-opacity-2-expected.png:
        * platform/chromium-linux/fast/frames/iframe-text-contents-expected.png:
        * platform/chromium-linux/tables/mozilla/bugs/bug137388-1-expected.png:
        * platform/chromium-linux/tables/mozilla/bugs/bug137388-3-expected.png:
        * platform/chromium-linux/tables/mozilla/bugs/bug50695-2-expected.png:

2010-08-31  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Null-deref when decoding web archive with no data key in LegacyWebArchive::createResource
        https://bugs.webkit.org/show_bug.cgi?id=45000

        * webarchive/loading/missing-data-expected.txt: Added.
        * webarchive/loading/missing-data.html: Added.