@@ -1,3 +1,15 @@
+2010-08-31  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by Dan Bernstein.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=44915
+        Need to handle CSSValueAuto in CSSPrimitiveValue::operator ETextAlign()
+        
+        * css/CSSPrimitiveValueMappings.h:
+        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue): Map TAAUTO to -webkit-auto.  "auto" is
+        not a valid text-align value.  We use TAAUTO internally for the nameless value that acts
+        as left if direction:ltr and right for direction:rtl.
+
 2010-08-31  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         Reviewed by Martin Robinson.
